--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         Thanks a lot to visit my profile page.</p>
         <a href = "https://www.fiverr.com/lordfiredragon?public_mode=true">My Fiverr Profile</a>
         <br>
+        <a href = "https://www.upwork.com/freelancers/~01639a31d260aed834?mp_source=share">My Upwork Profile</a>
+        <br>
         <a href = "https://open.spotify.com/artist/7nev5sWqaNiRNdA6904CKT?si=OgK6RuuySAiKEoyZLabiFw">My SPOTIFY Profile</a>
         <br>
         <a href = "https://www.instagram.com/lordfiredragon/">My INSTAGRAM Profile</a>
